# Recallly

./: .gitignore  CLAUDE.md  README.md  build.gradle.kts  index.html  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/at/recallly/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni.c
app/src/main/java/com/at/recallly/: MainActivity.kt  RecalllyApplication.kt
app/src/main/java/com/at/recallly/core/di/: AppModule.kt
app/src/main/java/com/at/recallly/core/result/: Result.kt
app/src/main/java/com/at/recallly/core/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/at/recallly/core/util/: ConnectivityChecker.kt  Constants.kt  DispatcherProvider.kt  Extensions.kt  FieldLocalizer.kt  LanguageManager.kt  RecalllyException.kt
app/src/main/java/com/at/recallly/data/ad/: RewardedAdManager.kt
app/src/main/java/com/at/recallly/data/backup/: BackupDto.kt  DriveBackupService.kt
app/src/main/java/com/at/recallly/data/billing/: BillingClientWrapper.kt  PremiumPreferences.kt
app/src/main/java/com/at/recallly/data/export/: PdfExportService.kt
app/src/main/java/com/at/recallly/data/notification/: AlarmReminderScheduler.kt  BootReceiver.kt  PendingReminder.kt  ReminderNotificationChannel.kt  ReminderReceiver.kt
app/src/main/java/com/at/recallly/data/remote/: GeminiExtractionService.kt
app/src/main/java/com/at/recallly/data/repository/: AdRepositoryImpl.kt  AuthRepositoryImpl.kt  BackupRepositoryImpl.kt  BillingRepositoryImpl.kt  CustomFieldRepositoryImpl.kt  OnboardingRepositoryImpl.kt  VoiceNoteRepositoryImpl.kt  WhisperRepositoryImpl.kt
app/src/main/java/com/at/recallly/data/whisper/: AudioRecorder.kt  WhisperContext.kt  WhisperModelManager.kt
app/src/main/java/com/at/recallly/data/worker/: BackupWorkScheduler.kt  BackupWorker.kt  ExtractionWorkScheduler.kt  ExtractionWorker.kt
app/src/main/res/mipmap-anydpi-v26/: recallly_ic_launcher_round.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-ar/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-tr/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  locales_config.xml
app/src/test/java/com/at/recallly/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+93 files in other folders)
